Source files for Dec13 newsletter.

--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -17,17 +17,23 @@ Richard Lodge's story of his time at Rolls-Royce. Taken together, they
 make an interesting ethnology of an extinct industrial culture. The
 whole series is accessible through our website,
 {\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}} (note that
-the location of the neswletter archive will change when the new
+the location of the newsletter archive will change when the new
 website goes live) starting with the April 2013 issue of the
 Chronicle.
+
+\vspace{12pt}
 
 We also have another hair-raising flying story from Tim Timmins. A
 series of previous Timmins stories can be found through the same
 website, starting with the December 2010 issue.
 
+\vspace{12pt}
+
 Motorheads among our readers should look into Ted Devey's extensive
 writings on the Rolls-Royce Merlin, starting in the December 2006
 issue.
+
+\vspace{12pt}
 
 All together, the archived issues are a valuable web resource for
 readers with an interest in aviation history or the history of Project
