--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -34,7 +34,7 @@ frequently to the exploded diagrams that I realize how complicated the
 work of the Technical Publications Department must have been. The men
 and women who worked there were largely unsung heroes in that it was
 very tedious and unglamorous work which was of great importance for
-the safe and trouble-free running of engines in service. I can
+the safe and trouble free running of engines in service. I can
 remember that I would hear from time to time of the difficulties of
 ensuring that publication updates were actually delivered to many
 remote places in the world and the considerable logistical
@@ -48,7 +48,7 @@ employed people who could translate into French and Spanish.
 After a couple of years I was given a new job in the Long Range
 Planning Department. I was one of three accountants working in this
 office under a very senior accountant. Here we looked at the costings
-of the development work, the projected sales  and production costs on
+of the development work, the projected sales and production costs on
 new engine designs. This was the time when the Spey was going into
 service and the the company had signed a fixed price contract for the
 RB211 engines for the new Lockheed 1011. This was a major project,
@@ -67,21 +67,19 @@ floor of the Nightingale Road offices. Many of them were engineers and
 they had little time for young bean counters. It was still a time of
 optimism for the company. The huge contract for the Lockheed engines
 had been signed and the company was still enjoying its reputation as
-the company whose Merlin engines had saved Britain in the air
-war. This was in 1965/6 and it was several years before our
-projections of doom resulted in the bankruptcy of the
+the company whose Merlin engines had helped to save Britain in the
+Second World War. This was in 1965/6 and it was several years before
+our projections of doom resulted in the bankruptcy of the
 company. Fortunately I left the company in 1966 and was not involved
 in what must have been a horrible process as a symbol of British
-engineering excellence slowly went to the wall. 
+engineering excellence slowly went to the wall.
 
 After the chaos caused by the demise of Rolls-Royce Limited, the
 British government formed a new nationalized company to take over the
 remains of the old one. This has been very much a success story and
-the newly privatized Rolls-Royce is now a highly profitable and
-innovative company. I look back on my days at R-R with nostalgia but I
-now realize that much of the time we were all living in a fool's
-paradise.
-
+the privatized Rolls-Royce is now a highly profitable and innovative
+company. I look back on my days at R-R with nostalgia but I now
+realize that much of the time we were all living in a fool's paradise.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
