--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -22,17 +22,6 @@ to NATO members under the Mutual Aid agreement. My personal experience
 with ferry operations was with Beechflight, the delivery of 25 C45s
 (Expeditors) to France and Portugal.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{rcaf_c45.eps}
-   %caption of the figure 
-   \caption*{\small \em RCAF C45 Expeditor a military variant of the Beech 18.Purchased in large numbers during WW II and after for pilot training, navigator training, and as a utility transport.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:rcaf_c45}
-\end{figure}
-
 Beachflight was a Training Command operation, under the command of
 Wing Commander Harry Forbell. Twenty six expeditors were assembled at
 Trenton where they were fitted with a 100 gallon fuel tank in the main
@@ -41,6 +30,17 @@ route. A pilot and navigator were assigned to each aircraft. I flew
 with Squadron Leader Brian, Marfleet, the designated Deputy Operation
 Commander. The aircraft were to fly in formation, four sections of
 five and one of six, within block airspace. 
+
+% \begin{figure}[htbp]
+%    \vspace{2em}
+%    \centering
+%    %name of the graphic, without the path AND in EPS format:
+%    \includegraphics[scale=0.5]{rcaf_c45.eps}
+%    %caption of the figure 
+%    \caption*{\small \em RCAF C45 Expeditor a military variant of the Beech 18.Purchased in large numbers during WW II and after for pilot training, navigator training, and as a utility transport.}
+%    %label of the figure, which has to correspond to \ref{}:
+%    \label{fig:rcaf_c45}
+% \end{figure}
 
 On 20 May 1959 Operation Beachflight was launched. Sections departed
 Trenton for Goose Bay at designated intervals in order to maintain
@@ -88,6 +88,25 @@ The east coast of Greenland is very rugged with numerous high
 peaks. Several crews in their descent out of the icing conditions
 broke cloud between these peaks. These stories were oft repeated and
 all called for another round of drinks. 
+
+\end{multicols}
+
+\begin{figure*}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=1.0]{BEECHFLIGHT0001.eps}
+   %caption of the figure 
+   \caption*{\small \em Photo, taken by Tim, of two RCAF C45
+     Expeditors (military variant of the Beech 18) during the ferry
+     flight he describes in this article. These aircraft were
+     purchased in large numbers during and after WW II for pilot
+     training, navigator training, and as utility transports.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:BEECHFLIGHT0001}
+\end{figure*}
+
+\begin{multicols}{2}
 
 The next day, 28 May, all the sections proceeded to Prestwick. The
 weather was perfect and I got a lot of stick time because my pilot was
