--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -1,3 +1,4 @@
+
 % Template PNSAC newsletter - Article
 % Language: Latex
 %
@@ -9,54 +10,68 @@
 
 \maketitle
 
-During the past three months we have moved steadily forward with the
-restoration of the North Star.  Our progress has been somewhat held up
-by lack of available volunteers.
+As we come to the end of 2013, I think of it as an interesting year
+with some disappointments and important successes. I believe we end
+the year in a very positive way and I look forward to 2014 with
+enthusiasm and renewed optimism.
 
-Our Association has two distinct and very important sides.  First and
-foremost we are a group whose interest is in the North Star and the
-restoration and preservation of the plane at the Museum.  Secondly,
-over the years, we have developed a strong social side to the
-Association where volunteers and other members can join in interesting
-events centered around aviation. Elsewhere in this issue of the
-Chronicle you will find a description by Bill Tate our Vice President,
-of the very successful trip on October 4 to the Navcan Air Control
-Centre and to the Bombardier factory in Montr\'{e}al.
+First let me get the disappointments out of the way. 2013 was our 10th
+anniversary year. We had hoped to make the event an opportunity to
+show off our achievements during the first 10 years and create
+additional interest around the plane. Unfortunately, due to events
+beyond our control, it was not possible to stage a significant event
+marking the anniversary. We therefore did our usual opening of the
+plane to the public on Canada Day and marked the anniversary with our
+PNSAC photographer taking photographs of members as they visited the
+restored cockpit.
 
-After 10 years of restoration work on the North Star we recognize that
-we must review our progress and develop a plan for the rest of the
-work on the plane.  There will be three aspects to this review.  Our
-first task will be to identify the major sections of the project and
-develop ways of actually carrying out the restoration.  The
-undercarriage of the plane is a particularly complicated challenge.
-We then need to prepare a plan with projected timelines for completing
-each part of the work.  Our third task will be to estimate costs and
-to develop ideas for financing it.  During this process we must also
-ensure that we will have sufficient qualified volunteers to get it
-done.
+The second disappointment is more serious. During 2013 we did not take
+on any new volunteers to work on the plane. We had several good
+applicants but were unable to fit any of them into the working
+schedule of volunteers at the Canada Aviation \& Space Museum
+(CASM). This has two downsides; the first being that we are now
+becoming short of active volunteers and the second being that we are
+not training any new and sometimes younger volunteers to work on
+pre-jet age aircraft. It is important to pass on the skills of the
+older volunteers to younger members of our Association.
 
-Before the end of November we are hoping to have meetings with the
-senior management of the Museum to update planning of all the tasks
-above.  The end result of this should be a documented project plan and
-a new Memorandum of Understanding between the Canada Aviation and
-Space Museum and the Project North Star Association of Canada.
+Funding the restoration of the aircraft is always a challenge and is
+becoming more so as the Federal government cuts back on the funds it
+appropriates to the CASM and other similar institutions..
 
-At times our progress on the restoration of the North Star may appear
-to Association members to be somewhat slow.  Unlike other
-organizations in Canada such as Vintage Wings in Gatineau or the
-Canada Warplane Heritage Museum in Hamilton, PNSAC cannot make
-decisions about the future of the North Star on its own.  As an
-Association working with a Federal Government institution we are often
-affected by decisions not related to the work we do.  This can at
-times provide interesting challenges.
+You may well ask why I feel optimistic about 2014 after referring to
+disappointments and problems. In the last two months the Directors of
+PNSAC met with the Director General of CASM, Stephen Quick, and
+subsequently a small group of directors met again with him together
+with CASM conservation staff. The outcome of these meetings has been
+an excellent exchange of views, a very firm commitment by the CASM to
+continue to actively support the North Star restoration and a better
+understanding by both sides of the challenges we face and possible
+ways forward.
 
-In conclusion, I would say that the Directors are working hard with
-the Museum management to move our project forward even though at times
-it may appear to be very difficult.  I hope that I will be able to
-report significant progress in the next issue of the Chronicle.  In
-the meantime we have some interesting events in the planning stages on
-the social side of the Association.  Stay tuned.
+As many of you already know, volunteer work on the North Star will be
+suspended for approximately the first three months of 2014. This is to
+enable CASM to undertake a major reorganization of the Museum exhibits
+in preparation for the centenary of the start of the First World
+War. During this time the CASM professional staff will be occupied
+with the reorganization and will not be able to provide the necessary
+supervision of restoration work. During this time, though, we plan to
+update the work plan and overall budget for completing the North Star
+restoration, work on fundraising initiatives and finally update our
+Memorandum of Understanding with CASM.
 
+In addition to our hands-on restoration work, the Association has a
+strong social side. Bill Tate, our Vice President, and his Special
+Events team have organized some memorable bus trips, the last of which
+was to Montreal in October. Bill has now turned his considerable
+organizational skills to further developing our quarterly Members'
+Meetings. In early December we had a great morning at CASM when
+Capt. Bob Pearson of the Gimli Glider fame made a presentation to 150
+of our members and members of other aviation organizations we invited
+to attend. Although our Vice President has retired as an airline
+captain, he certainly has not retired from anything else. Watch your
+emails, Facebook and Twitter for news of events Bill and his team are
+planning for 2014.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
