--- a/pnsac/newsletter/article_SpecialEvents.tex
+++ b/pnsac/newsletter/article_SpecialEvents.tex
@@ -1,5 +1,6 @@
 
 
+
 % Template PNSAC newsletter
 % Language: Latex
 
@@ -53,7 +54,7 @@ rare privilege.
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{Pearson004.eps}
+   \includegraphics[scale=0.9]{Pearson004.eps}
    %caption of the figure 
    \caption*{\small \em Captain (retd.) Robert Pearson.}
    %label of the figure, which has to correspond to \ref{}:
@@ -104,9 +105,9 @@ following volunteers received certificates for the hours shown:
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{Pearson007.eps}
+   \includegraphics[scale=0.9]{Pearson007.eps}
    %caption of the figure 
-   \caption*{\small \em Richard Lodge presenting Captain Pearon with a
+   \caption*{\small \em Richard Lodge presenting Captain Pearson with a
      certificate for Honorary Life Membership in PNSAC.}
    %label of the figure, which has to correspond to \ref{}:
    \label{fig:engine3propcowl}
