--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -1,5 +1,3 @@
-
-
 % Main document PNSAC newsletter
 % Language: Latex
 %
@@ -52,8 +50,8 @@
 \begin{document}
 
 \volume{9} % \volnumber{1}
-\issue{4}
-\date{October 2013} 
+\issue{5}
+\date{December 2013} 
 \titlepage
 
 % Editor's notes
@@ -64,6 +62,7 @@
 	\input{article_EditorsNotes} 
 \end{article}
 
+\pagebreak
 
 % President's report ................................................. %
 
@@ -72,6 +71,7 @@
 	\input{article_PresReport} 
 \end{article}
 
+%\pagebreak
 
 % Progress report ................................................... %
 
@@ -149,7 +149,7 @@
 % 	\input{article_Special} 
 % \end{article}
 
-%\pagebreak
+\pagebreak
 
 
 % Forthcoming events ................................................. %
