--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -5,29 +5,29 @@
 % Head
 
 \title{Project Manager's Progress Report}
-\subtitle{December 2013}
+\subtitle{April 2014}
 \author{Bruce Gemmill}
 
 \maketitle
 
+Due to museum preparations for a display to mark the beginning of
+the First World War and other events in 2014, the restoration
+space used by Project North Star was taken over by other museum
+projects, and most work on the North Star was suspended.
+However, some limited work did continue.
+
 \section{Nr 3 Engine}
 \label{sec:engines_3}
 
-Engine 3 is nearing completion.  The supercharger and intercooler
-preheat assemblies have been installed, along with the propeller
-reduction gearbox.  While this work was being carried out by the
-engine crew, the remainder of the volunteer work force busied
-themselves completing the numerous cowl panels, pipes and hoses and
-other pieces needed to complete the engine.  Two items that seemed to
-take forever were the large steel exhaust shrouds.  A lot of hammering
-was needed to pound out years of dents, then numerous rivets and all
-the Dzus fasteners and springs needed to be replaced.  The complex
-shape of the exhaust shroud made this challenging work.  Further
-delaying completion was the search for suitable clear coat to protect
-the steel from corrosion.  The old clearcoat we used successfully on
-engines 1 and 2 is no longer available.  Mike Irvin finally located a
-suitable replacement, and the shrouds were clear coated and serial
-numbers were stencilled on.
+Work on Engine 3 was halted for several weeks in early 2014, but
+has now resumed on a reduced work schedule.  Most accessories are
+now installed, and soon the cowl panels will be fitted.  It is
+expected that Engine 3 will be installed late this spring or
+early summer, so that work can begin on removing and restoring
+Engine 4.
+
+This downtime also offered the opportunity for the engine crew to
+clean and re-organize the engine shop.
 
 \begin{figure}[htbp]
    \vspace{2em}
@@ -40,48 +40,58 @@ numbers were stencilled on.
    \label{fig:Eng3Intercooler}
 \end{figure}
 
-The auxiliary gearbox was disassembled, and significant corrosion was
-found on the bearings inside.  Bearings had to be ordered from
-England.  Meanwhile, the gearbox was cleaned and painted.  At the same
-time, the large DC generator was dismantled, repainted and
-reassembled, as well as the air pump and the tachometer generator and
-propeller synchronizer.  Once the new bearings were installed, the
-gearbox was completed and the generator and air pump were attached.
-Finally, the gearbox was installed on the firewall, which is now
-finished, awaiting the installation of engine \#3.
+\section{Cockpit}
+\label{cockpit}
 
+While restoration work in the shop could not be continued, we
+used the opportunity to install the crew seats and other restored
+items to the cockpit.  The pilot seat was installed (first
+officer seat was installed last year) then the railings and
+safety board were installed behind the seats.  Next we installed
+the radio officer and navigator tables, and the seats for these
+positions.  The radio officer seat proved to be a particular
+challenge, as the floor in this area is no longer flat, and some
+modifications to the seat rails were necessary to allow the seat
+to slide.  Finally the flight engineer’s jump seat was attached
+to the railing.  With five crew seats installed, the cockpit is
+very cramped.
+
+The cockpit installations were finished off by installing the
+curtains, crew oxygen hoses, and a Morse code key at the radio
+position.
 
 \section{Crew Lounge, Galley,  and Forward Washroom}
 \label{crewlounge}
 
-Work has slowed on the forward section of the aircraft.  The repair
-needed under the floor of the crew lounge is on hold until a suitable
-piece of extruded aluminum can be found.  Until this is complete, the
-new cushion flooring cannot be installed. This has also delayed the
-installation of all of the crew lounge accessories, such as the table,
-seats and secure storage bin, all of which are complete but waiting in
-storage.
+The floor under this section was repaired by removing a section
+of badly corroded “I” beam and fabricating a new one from several
+pieces of aluminum which were riveted in place to support the
+floor.  Once this repair was completed, new cushion flooring was
+cut and glued to the crew lounge and the washroom floor, then
+various pieces of floor trim were installed.  To install the crew
+seat, it was necessary to remove the lower support section, since
+the fully assembled seat could not easily fit through the narrow
+doorway.  Once the seat was installed, we added the crew table
+and bunk bed, along with the secure storage box.  We also
+installed the curtain rod and new curtains to close off the bunk
+bed. The installation was finished off by re-installing the door
+between the lounge and the main cabin, so that this fully
+restored area can be protected from dust and debris while the
+main cabin undergoes restoration over the next two years.
 
-\section{Fuselage and Empennage}
-\label{empenage}
+The completion of the forward area of the aircraft marks a
+significant milestone in the restoration of the North Star.
 
-The forward and rear belly compartments are now complete.  All the
-frame pieces and hardware needed for the troop seats have been made,
-and work is progressing on the seats and backs.  One section has
-undergone a trial fit, and all pieces seem to fit perfectly.
-
-\section{Planned Restoration Work 2013/14}
+\section{Planned Restoration Work 2014}
 \label{sec:plannedwork}
 
-The museum has advised all North Star volunteers that our work must be
-put on hold for several months while a major exhibit for the 100th
-anniversary of the beginning of the First World War is prepared.  Our
-work space in the restoration hangar is needed to assemble and prepare
-several aircraft that will be added to the display space in March.
-Until then our work on the aircraft is suspended, but we don't expect
-this delay to have a serious impact on the overall project.  We look
-forward to resuming work in the Spring.
-
+Some limited work is being done to remove fittings and wall
+panels from the main cabin, in preparation for some major
+restoration work this summer.  Fabric work on the troop seats is
+nearing completion, although the seats will not be installed
+until all work on the main cabin is complete.  We hope to resume
+a full work schedule by June, with the aircraft outside once
+more.
 
 \begin{footnotesize}
   \raggedleft PNSAC\\
