--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -49,9 +49,9 @@
 
 \begin{document}
 
-\volume{9} % \volnumber{1}
-\issue{5}
-\date{December 2013} 
+\volume{10} % \volnumber{10}
+\issue{1}
+\date{May 2014} 
 \titlepage
 
 % Editor's notes
@@ -107,9 +107,9 @@
 %\pagebreak
 
 % Feature article
-\begin{article}
-	\input{article_Feature3} 
-\end{article}
+%\begin{article}
+%	\input{article_Feature3} 
+%\end{article}
 
 %\pagebreak
 
@@ -140,9 +140,9 @@
 %\pagebreak
 
 % Special article 
-\begin{article}
-	\input{article_SpecialEvents} 
-\end{article}
+%\begin{article}
+%	\input{article_SpecialEvents} 
+%\end{article}
 
 % Special article 
 % \begin{article}
