--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -12,32 +12,49 @@
 
 \end{multicols}
 
-This issue of the Chronicle carries the last of four chapters in
-Richard Lodge's story of his time at Rolls-Royce. Taken together, they
-make an interesting ethnology of an extinct industrial culture. The
-whole series is accessible through our website,
-{\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}} (note that
-the location of the newsletter archive will change when the new
-website goes live) starting with the April 2013 issue of the
-Chronicle.
+While our project has been on hold, your editor still had to find some
+content for the Chronicle.
+
+%This issue of the Chronicle carries the last of four chapters in
+%Richard Lodge's story of his time at Rolls-Royce. Taken together, they
+%make an interesting ethnology of an extinct industrial culture. The
+%whole series is accessible through our website,
+%{\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}} (note that
+%the location of the newsletter archive will change when the new
+%website goes live) starting with the April 2013 issue of the
+%Chronicle.
 
 \vspace{12pt}
 
-We also have another hair-raising flying story from Tim Timmins. A
-series of previous Timmins stories can be found through the same
-website, starting with the December 2010 issue.
+Jim Riddoch came to the rescue with a story about a
+successful\/disastrous flight test.  We like these kinds of
+stories--to small and personal to turn up in the history books, but
+they do pull you into real human experiences. There will be more of these. 
+
+%We also have another hair-raising flying story from Tim Timmins. A
+%series of previous Timmins stories can be found through the same
+%website, starting with the December 2010 issue.
 
 \vspace{12pt}
 
-Motorheads among our readers should look into Ted Devey's extensive
-writings on the Rolls-Royce Merlin, starting in the December 2006
-issue.
+Your editor became a writer too, and the writer submitted a tragic
+story about a French aviatice. The story was accepted by the editor in
+a blatant conflict of interest.
+
+%Motorheads among our readers should look into Ted Devey's extensive
+%writings on the Rolls-Royce Merlin, starting in the December 2006
+%issue.
 
 \vspace{12pt}
 
-All together, the archived issues are a valuable web resource for
-readers with an interest in aviation history or the history of Project
-North Star.
+And we bring you a poem by David Lambeth, an ode to the North Star
+that was first published in the Chronicle of November 2005. Volunteer
+Tim Timmins had found it in a hidey-hole in the aeroplane in the early
+days of our restoration project.  Enjoy!
+
+%All together, the archived issues are a valuable web resource for
+%readers with an interest in aviation history or the history of Project
+%North Star.
 
 
 
